<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Puesto general -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_position"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_detail_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <!-- Puesto categoría -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_category_position"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_detail_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <!-- Nombre completo -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <!-- Dorsal -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_dorsal"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_detail_dorsal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <!-- Tiempo -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_time"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_detail_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>